Fixed collapse indicator

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -241,3 +241,12 @@ div.tooltip{
   width: 1em;
 }
 
+.card-header a[aria-expanded="true"] .rotfa {
+    transition: 400ms linear;
+    transform: rotate(180deg);
+}
+
+.card-header a[aria-expanded="false"] .rotfa {
+    transition: 400ms linear;
+    transform: rotate(0deg);
+}
